--- a/.github/actions/create-pull-request/action.yml
+++ b/.github/actions/create-pull-request/action.yml
@@ -5,6 +5,6 @@ runs:
   using: "composite"
   steps:
     - name: Auto Create
-      uses: cpdevtools/action-versions@v<%= versions.CPDEVTOOLS_ACTION_VERSIONS %>
+      uses: cpdevtools/action-versions@v0.5
       with:
         autoCreatePullRequest: true
