--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -12,13 +12,13 @@ runs:
   steps:
     - name: Check Version
       id: version
-      uses: cpdevtools/action-versions@v<%= versions.CPDEVTOOLS_ACTION_VERSIONS %>
+      uses: cpdevtools/action-versions@v0.5
       with:
         failInvalidCanCreate: true
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v<%= versions.GITHUB_ACTIONS_CREATE_RELEASE %>
+      uses: actions/create-release@v1.0.1
       env:
         GITHUB_TOKEN: ${{ input.githubToken }}
       with:
@@ -30,6 +30,6 @@ runs:
         prerelease: ${{ steps.version.outputs.targetIsPrerelease }}
 
     - name: Create tags
-      uses: cpdevtools/action-versions@v<%= versions.CPDEVTOOLS_ACTION_VERSIONS %>
+      uses: cpdevtools/action-versions@v0.5
       with:
         createTags: all
