--- a/.github/workflows/check-successfully-builds.yml
+++ b/.github/workflows/check-successfully-builds.yml
@@ -1,15 +1,16 @@
-name: Test
+name: Builds Successfully
 
 on:
   push:
     branches:
       - "*"
+      - "*/*"
+      - "!release/*"
 
 jobs:
-  publish:
-    name: Test
+  check_builds:
+    name: Test if the project builds successfully
     runs-on: ubuntu-latest
-    if: ${{ github.repository == 'cpdevtools/template-ts-package' }}
     steps:
       - name: Checkout Project
         uses: actions/checkout@v3.1.0
