--- a/.github/workflows/create-new-version-pr.yml
+++ b/.github/workflows/create-new-version-pr.yml
@@ -13,6 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project
-        uses: actions/checkout@v<%= versions.GITHUB_ACTIONS_CHECKOUT %>
+        uses: actions/checkout@v3.1.0
 
       - uses: ./.github/actions/create-pull-request
