--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project
-        uses: actions/checkout@v<%= versions.GITHUB_ACTIONS_CHECKOUT %>
+        uses: actions/checkout@v3.1.0
 
       - name: Check Version
         uses: ./.github/actions/check-version
@@ -23,4 +23,3 @@ jobs:
 
       - name: Run Tests
         uses: ./.github/actions/test
-
