--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,23 +20,11 @@
     "useDefineForClassFields": true,
     "strict": true,
     "traceResolution": false,
-    "typeRoots": [
-      "node_modules/@types",
-      "src/types"
-    ],
-    "lib": [
-      "esnext"
-    ],
-    "types": [
-      "node"
-    ]
+    "typeRoots": ["node_modules/@types", "src/types"],
+    "lib": ["esnext"],
+    "types": ["node"]
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules/**",
-    "dist"
-  ],
+  "include": ["src"],
+  "exclude": ["node_modules/**", "dist"],
   "compileOnSave": false
 }
