--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@cpdevtools/install-wsl",
-  "version": "0.0.0-dev.0",
+  "version": "0.0.1-dev.0",
   "repository": "https://github.com/cpdevtools/install-wsl",
   "typings": "./dist/index.d.ts",
   "main": "./dist/index.js",
+  "bin": "./dist/cli.js",
   "engines": {
     "node": ">=14.16"
   },
