--- a/.github/actions/publish-node-package/action.yml
+++ b/.github/actions/publish-node-package/action.yml
@@ -9,11 +9,11 @@ inputs:
   toNpm:
     description: "Publish to npm package registry"
     required: false
-    default: false
+    default: "false"
   toGithub:
     description: "Publish to github package registry"
     required: false
-    default: true
+    default: "true"
   githubToken:
     description: "Github Token"
     required: false
@@ -26,7 +26,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - if: ${{ inputs.toGithub == 'true' || inputs.toGithub == true}}
+    - if: ${{ inputs.toGithub == 'true'}}
       uses: actions/setup-node@v3.1.0
       with:
         node-version: ${{ inputs.nodeVersion }}
@@ -36,14 +36,14 @@ runs:
         always-auth: true
         scope: ${{ github.repository_owner }}
 
-    - if: ${{ inputs.toGithub == 'true' || inputs.toGithub == true}}
+    - if: ${{ inputs.toGithub == 'true'}}
       env:
-        GITHUB_TOKEN: ${{ input.githubToken }}
-        NODE_AUTH_TOKEN: ${{ input.githubToken }}
+        GITHUB_TOKEN: ${{ inputs.githubToken }}
+        NODE_AUTH_TOKEN: ${{ inputs.githubToken }}
       run: pnpm run actions-publish
       shell: bash
 
-    - if: ${{ inputs.toNpm == 'true' || inputs.toNpm == true}}
+    - if: ${{ inputs.toNpm == 'true'}}
       uses: actions/setup-node@v3.1.0
       with:
         node-version: ${{ inputs.nodeVersion }}
@@ -53,8 +53,8 @@ runs:
         always-auth: true
         scope: ${{ github.repository_owner }}
 
-    - if: ${{ inputs.toNpm == 'true' || inputs.toNpm == true}}
+    - if: ${{ inputs.toNpm == 'true'}}
       env:
-        NODE_AUTH_TOKEN: ${{ input.npmToken }}
+        NODE_AUTH_TOKEN: ${{ inputs.npmToken }}
       run: pnpm run actions-publish
       shell: bash
