--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -20,7 +20,7 @@ runs:
       id: create_release
       uses: actions/create-release@v1.0.1
       env:
-        GITHUB_TOKEN: ${{ input.githubToken }}
+        GITHUB_TOKEN: ${{ inputs.githubToken }}
       with:
         tag_name: v${{ steps.version.outputs.targetVersion }}
         release_name: Release v${{ steps.version.outputs.targetVersion }}
