--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "repository": "https://github.com/cpdevtools/install-wsl",
   "typings": "./dist/index.d.ts",
   "main": "./dist/index.js",
-  "bin": "./dist/cli.js",
+  "bin": {
+    "install-wsl": "./dist/cli.js"
+  },
   "engines": {
     "node": ">=14.16"
   },
