--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pack": "run-s pack:*",
     "pack:npm-pack": "cd dist && mkdir ./pack && pnpm pack --pack-destination ./pack",
     "release": "run-s release:*",
-    "release:publish": "pnpm publish ./pack --access public --publish-branch 'release/latest'",
+    "release:publish": "pnpm publish ./dist/pack --access public --publish-branch 'release/latest'",
     "actions-test": "pnpm run test",
     "actions-build": "pnpm run build",
     "actions-pack": "pnpm run pack",
