new create release

--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -18,12 +18,11 @@ runs:
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1.0.1
+      uses: ncipollo/release-action@v1.12.0
       env:
         GITHUB_TOKEN: ${{ inputs.githubToken }}
       with:
-        tag_name: v${{ steps.version.outputs.targetVersion }}
-        release_name: Release v${{ steps.version.outputs.targetVersion }}
+        name: Release v${{ steps.version.outputs.targetVersion }}
         body: |
           Generated Release v${{ steps.version.outputs.targetVersion }}
         draft: false
