--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/node": "18.11.18",
     "@types/semver": "7.3.13",
+    "@types/yargs": "^17.0.19",
     "husky": "8.0.3",
     "lint-staged": "13.1.0",
     "npm-run-all2": "6.0.4",
@@ -58,7 +59,8 @@
     "ts-node": "10.9.1",
     "tslib": "2.4.1",
     "type-fest": "3.5.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yargs": "^17.6.2"
   },
   "fromTemplate": [
     "@cpdevtools/template-ts-package@0.0.0-dev.0",
